# cpp-game-journey

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
LICENSE/: License
docs/: 2026-06-01.md
docs/journal/: 2026-05-25.md  2026-05-27.md  2026-05-28.md  2026-05-29.md  2026-05-30.md  2026-05-31.md  2026-06-02.md  2026-06-03.md  2026-06-04.md  2026-06-05.md  2026-06-06.md  2026-06-07.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-14.md
src/: .gitignore  arena_survivor.cpp  audio_manager.cpp  battle_architecture.cpp  damage_resolver.cpp  entity_tracker.cpp  game_loop_sim.cpp  inventory_system.cpp  main.cpp  memory_lifetime_pool.cpp  stat_calculator.cpp  vector_entity_manager.cpp  vector_profiling.cpp
src/src/: aabb_collision.cpp  character_base.cpp  entity_manager_capstone.cpp  frame_pacing_polish.cpp  json_save_system.cpp  memory_bug_hunter.cpp  polymorphic_units.cpp  pong_capstone.cpp  post_processing_shader.cpp  realtime_movement.cpp  smart_ptr_manager.cpp  state_machine.cpp  window_framework.cpp
